# RTSoftPractice

./: README.md  my_rule.rules
task_1_1/: device_added.sh
task_1_2/: ADC_driver.c  Makefile  README.md
task_2_1/: Dockerfile  README.md
task_2_2/: CMakeLists.txt  Dockerfile  README.md  task_2_2.cpp
task_3/: CMakeLists.txt  Dockerfile  README.md  task_3.cpp
